# teensy-41-mcuxsdk-example

./: CMakeLists.txt  LICENSE  build.sh  prepare.sh  readme.txt
board/: pin_mux.c  pin_mux.h
cmake/: Board.cmake  Components.cmake  Config.cmake  Flags.cmake
cmake/Flags/: FlexSpiNorDebug.cmake  FlexSpiNorRelease.cmake
include/: teensy.h
include/app/: blinkTask.h
include/app/tasks/: blinkTask.h
source/: main.c
src/: main.c  teensy.c
src/app/: blinkTask.c
src/app/tasks/: blinkTask.c
src/board/: pin_mux.c
